--- a/src/Log4NetBug/Log4NetBug.csproj
+++ b/src/Log4NetBug/Log4NetBug.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.CognitoIdentity" Version="3.3.2.10" />
     <PackageReference Include="AWSSDK.S3" Version="3.3.5.17" />
   </ItemGroup>
 
